--- a/post.hbs
+++ b/post.hbs
@@ -55,11 +55,11 @@
 
         {{/author}}
 
-            <section class="share">
-                <h4>Share this post</h4>
-                <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                    <span class="hidden">Twitter</span>
+            <!--<section class="share">
+                <h4>Share This Post</h4>
+                <a class="icon-twitter" href="http://service.weibo.com/share/share.php?title={{encode title}}&amp;ralateUid=1948101653&amp;url={{url absolute="true"}}&amp;pic={{image}}"
+                    onclick="window.open(this.href, '微博分享', 'width=550,height=235');return false;">
+                    <span class="hidden">Weibo</span>
                 </a>
                 <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
@@ -69,12 +69,12 @@
                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                     <span class="hidden">Google+</span>
                 </a>
-            </section>
+            </section>-->
 
         </footer>
 
         <!-- 多说评论框 start -->
-            <div class="ds-thread" data-thread-key="{{post}}" data-title="{{title}}" data-url="{{url}}"></div>
+            <div class="ds-thread" data-thread-key="{{uuid}}" data-title="{{title}}" data-url="{{url absolute="true"}}"></div>
         <!-- 多说评论框 end -->
         <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
         <script type="text/javascript">
