--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -161,6 +161,34 @@ table { border-collapse: collapse; border-spacing: 0; }
     content: "\f608";
 }
 
+/* iconfont.cn */
+@font-face {font-family: "iconfont";
+  src: url('../fonts/iconfont.eot'); /* IE9*/
+  src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/iconfont.woff') format('woff'), /* chrome、firefox */
+  url('../fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('../fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.iconfont-douban:before { content: "\e604"; }
+
+.iconfont-renren:before { content: "\e600"; }
+
+.iconfont-weibo:before { content: "\e601"; }
+
+.iconfont-wechat:before { content: "\e602"; }
+
+.iconfont-qzone:before { content: "\e603"; }
+
 
 /* ==========================================================================
    2. General - Setting up some base styles
@@ -894,9 +922,7 @@ body:not(.post-template) .post-title {
 /* Break out larger images to be wider than the main text column
    the class is applied with jQuery */
 .post-content .full-img {
-    width: 126%;
-    max-width: none;
-    margin: 0 -13%;
+    max-width: 100%;
 }
 
 /* The author credit area after the post */
@@ -964,7 +990,7 @@ body:not(.post-template) .post-title {
 .post-footer .share a {
     font-size: 1.8rem;
     display: inline-block;
-    margin: 1rem 1.6rem 1.6rem 0;
+    margin: 0.5rem 0.5rem 0.5rem 0;
     color: #BBC7CC;
     text-decoration: none;
 }
