--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta property="qc:admins" content="062160041221555647411" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{! Styles'n'Scripts }}
