--- a/default.hbs
+++ b/default.hbs
@@ -11,11 +11,12 @@
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="qc:admins" content="062160041221555647411" />
+    <link rel="stylesheet" href="//cdn.staticfile.org/twitter-bootstrap/3.3.0/css/bootstrap.css">
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/theme.css"}}"
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -34,8 +35,10 @@
     {{ghost_foot}}
 
     {{! The main JavaScript file for Casper }}
+    <script src="//cdn.staticfile.org/twitter-bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/logics.js"}}"></script>
 
 </body>
 </html>
