--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/theme.css"}}"
+    <link rel="stylesheet" type="text/css" href="{{asset "css/theme.min.css"}}"
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
