--- a/assets/template/sider.html
+++ b/assets/template/sider.html
@@ -1,1 +1,10 @@
-hello sider
+<div class="sider" ng-show="showSider">
+  <ul>
+    <li>
+      <a href="">写文章</a>
+    </li>
+    <li>
+      <a href="">登出</a>
+    </li>
+  </ul>
+</div>
