--- a/default.hbs
+++ b/default.hbs
@@ -22,7 +22,9 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}" ng-app="ghost">
-
+  <div class="loading" ng-hide="loaded">
+    loading...
+  </div>
     {{! Everything else gets inserted here }}
     {{{body}}}
 
@@ -36,10 +38,10 @@
 
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
-    <script src="//cdn.staticfile.org/twitter-bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/logics.js"}}"></script>
+
 
 </body>
 </html>
