--- a/index.hbs
+++ b/index.hbs
@@ -2,14 +2,7 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 
 {{! The big featured header }}
-<header ng-controller="index" class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}" ng-class="{'backdrop':showSider}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @user}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-        <a ng-if="!me" class="subscribe-button" href="/signin">Login</a>
-        <a ng-if="me" class="user-profile" ng-click="toggleSider()">
-          <div class="avatar" ng-style="{'background-image':'url('+me.image+')'}"></div>{[{me.name}]}
-        </a>
-    </nav>
+<header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">{{@blog.title}}</h1>
@@ -20,13 +13,10 @@
 </header>
 
 {{! The main content area on the homepage }}
-<main id="content" class="content" role="main" ng-class="{'backdrop':showSider}">
+<main id="content" class="content" role="main">
 
     {{! The tag below includes the post loop - partials/loop.hbs }}
     {{> "loop"}}
 
 </main>
 
-<div ng-if="me">
-  <div ng-include="'{{asset "template/sider.html"}}'"></div>
-</div>
