--- a/post.hbs
+++ b/post.hbs
@@ -64,7 +64,7 @@
                     <span class="hidden">微博</span>
                 </a>
 
-                <a title="QQ空间" class="iconfont iconfont-qzone" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{url absolute="true"}}&title={{title}}&summary={{excerpt characters="120"}}&desc=这篇文章不错，推荐大家看看。&site=marry-me.today&pics={{#if image}}{{image}}{{/if}}"
+                <a title="QQ空间" class="iconfont iconfont-qzone" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{url absolute="true"}}&title={{title}}&summary={{excerpt characters="120"}}&desc=这篇文章不错，推荐大家看看。&site=tech.marry-me.today&pics={{#if image}}{{image}}{{/if}}"
                      target="_blank">
                      <span class="hidden">QQ空间</span>
                 </a>
